--- a/economy-gui/src/main/resources/fxml/eq.fxml
+++ b/economy-gui/src/main/resources/fxml/eq.fxml
@@ -196,44 +196,44 @@
             <TextField id="textField_leftHand" fx:id="textField_leftHand" editable="false" layoutX="409.0" layoutY="158.0" prefHeight="15.0" prefWidth="71.0" />
             <Button layoutX="415.0" layoutY="183.0" mnemonicParsing="false" onAction="#removeLeftHand" text="Take off" />
             <TextField alignment="CENTER" editable="false" layoutX="409.0" layoutY="45.0" prefHeight="15.0" prefWidth="71.0" text="LeftHand" />
-            <Button layoutX="1051.0" layoutY="208.0" mnemonicParsing="false" onAction="#switchToMap" text="BackToMap" />
-            <ImageView fx:id="helmetImage" fitHeight="78.0" fitWidth="71.0" layoutX="18.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="capeImage" fitHeight="78.0" fitWidth="71.0" layoutX="121.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="necklaceImage" fitHeight="78.0" fitWidth="71.0" layoutX="220.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="rightHandImage" fitHeight="78.0" fitWidth="71.0" layoutX="319.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="leftHandImage" fitHeight="78.0" fitWidth="71.0" layoutX="409.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="torsoImage" fitHeight="78.0" fitWidth="71.0" layoutX="498.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="ringImage" fitHeight="78.0" fitWidth="71.0" layoutX="589.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="feetImage" fitHeight="78.0" fitWidth="71.0" layoutX="677.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="miscellaneousImage" fitHeight="78.0" fitWidth="71.0" layoutX="765.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="ballistaImage" fitHeight="78.0" fitWidth="71.0" layoutX="21.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="ammoCartImage" fitHeight="78.0" fitWidth="71.0" layoutX="122.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="firstAidTentImage" fitHeight="78.0" fitWidth="71.0" layoutX="224.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="catapultImage" fitHeight="78.0" fitWidth="71.0" layoutX="322.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="spellbookImage" fitHeight="78.0" fitWidth="71.0" layoutX="423.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage1" fitHeight="78.0" fitWidth="71.0" layoutX="26.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage2" fitHeight="78.0" fitWidth="71.0" layoutX="123.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage3" fitHeight="78.0" fitWidth="71.0" layoutX="220.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage4" fitHeight="78.0" fitWidth="71.0" layoutX="316.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage5" fitHeight="78.0" fitWidth="71.0" layoutX="409.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage6" fitHeight="78.0" fitWidth="71.0" layoutX="498.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage7" fitHeight="78.0" fitWidth="71.0" layoutX="586.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage8" fitHeight="78.0" fitWidth="71.0" layoutX="677.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage9" fitHeight="78.0" fitWidth="71.0" layoutX="767.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage10" fitHeight="78.0" fitWidth="71.0" layoutX="858.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage11" fitHeight="78.0" fitWidth="71.0" layoutX="956.0" layoutY="491.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage12" fitHeight="78.0" fitWidth="71.0" layoutX="26.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage13" fitHeight="78.0" fitWidth="71.0" layoutX="123.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage14" fitHeight="78.0" fitWidth="71.0" layoutX="224.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage15" fitHeight="78.0" fitWidth="71.0" layoutX="322.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage16" fitHeight="78.0" fitWidth="71.0" layoutX="409.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage17" fitHeight="78.0" fitWidth="71.0" layoutX="498.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage18" fitHeight="78.0" fitWidth="71.0" layoutX="585.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage19" fitHeight="78.0" fitWidth="71.0" layoutX="677.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage20" fitHeight="78.0" fitWidth="71.0" layoutX="767.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage21" fitHeight="78.0" fitWidth="71.0" layoutX="859.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="slotImage22" fitHeight="78.0" fitWidth="71.0" layoutX="956.0" layoutY="661.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="labelItemInfo" layoutX="977.0" layoutY="71.0" prefHeight="128.0" prefWidth="152.0" />
+            <Button layoutX="1053.0" layoutY="346.0" mnemonicParsing="false" onAction="#switchToMap" text="BackToMap" />
+            <ImageView fx:id="helmetImage" fitHeight="78.0" fitWidth="71.0" layoutX="18.0" layoutY="70.0" onMouseEntered="#showInfoHelmet" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="capeImage" fitHeight="78.0" fitWidth="71.0" layoutX="121.0" layoutY="70.0" onMouseEntered="#showInfoCape" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="necklaceImage" fitHeight="78.0" fitWidth="71.0" layoutX="220.0" layoutY="70.0" onMouseEntered="#showInfoNecklace" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="rightHandImage" fitHeight="78.0" fitWidth="71.0" layoutX="319.0" layoutY="70.0" onMouseEntered="#showInfoRightHand" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="leftHandImage" fitHeight="78.0" fitWidth="71.0" layoutX="409.0" layoutY="70.0" onMouseEntered="#showInfoLeftHand" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="torsoImage" fitHeight="78.0" fitWidth="71.0" layoutX="498.0" layoutY="70.0" onMouseEntered="#showInfoTorso" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="ringImage" fitHeight="78.0" fitWidth="71.0" layoutX="589.0" layoutY="70.0" onMouseEntered="#showInfoRing" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="feetImage" fitHeight="78.0" fitWidth="71.0" layoutX="677.0" layoutY="70.0" onMouseEntered="#showInfoFeet" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="miscellaneousImage" fitHeight="78.0" fitWidth="71.0" layoutX="765.0" layoutY="70.0" onMouseEntered="#showInfoMiscellaneous" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="ballistaImage" fitHeight="78.0" fitWidth="71.0" layoutX="21.0" layoutY="245.0" onMouseEntered="#showInfoBallista" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="ammoCartImage" fitHeight="78.0" fitWidth="71.0" layoutX="122.0" layoutY="245.0" onMouseEntered="#showInfoAmmoCart" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="firstAidTentImage" fitHeight="78.0" fitWidth="71.0" layoutX="224.0" layoutY="245.0" onMouseEntered="#showInfoFirstAidTent" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="catapultImage" fitHeight="78.0" fitWidth="71.0" layoutX="322.0" layoutY="245.0" onMouseEntered="#showInfoCatapult" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="spellbookImage" fitHeight="78.0" fitWidth="71.0" layoutX="423.0" layoutY="245.0" onMouseEntered="#showInfoSpellbook" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage1" fitHeight="78.0" fitWidth="71.0" layoutX="26.0" layoutY="491.0" onMouseEntered="#showInfoSlot1" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage2" fitHeight="78.0" fitWidth="71.0" layoutX="123.0" layoutY="491.0" onMouseEntered="#showInfoSlot2" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage3" fitHeight="78.0" fitWidth="71.0" layoutX="220.0" layoutY="491.0" onMouseEntered="#showInfoSlot3" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage4" fitHeight="78.0" fitWidth="71.0" layoutX="316.0" layoutY="491.0" onMouseEntered="#showInfoSlot4" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage5" fitHeight="78.0" fitWidth="71.0" layoutX="409.0" layoutY="491.0" onMouseEntered="#showInfoSlot5" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage6" fitHeight="78.0" fitWidth="71.0" layoutX="498.0" layoutY="491.0" onMouseEntered="#showInfoSlot6" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage7" fitHeight="78.0" fitWidth="71.0" layoutX="586.0" layoutY="491.0" onMouseEntered="#showInfoSlot7" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage8" fitHeight="78.0" fitWidth="71.0" layoutX="677.0" layoutY="491.0" onMouseEntered="#showInfoSlot8" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage9" fitHeight="78.0" fitWidth="71.0" layoutX="767.0" layoutY="491.0" onMouseEntered="#showInfoSlot9" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage10" fitHeight="78.0" fitWidth="71.0" layoutX="858.0" layoutY="491.0" onMouseEntered="#showInfoSlot10" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage11" fitHeight="78.0" fitWidth="71.0" layoutX="956.0" layoutY="491.0" onMouseEntered="#showInfoSlot11" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage12" fitHeight="78.0" fitWidth="71.0" layoutX="26.0" layoutY="661.0" onMouseEntered="#showInfoSlot12" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage13" fitHeight="78.0" fitWidth="71.0" layoutX="123.0" layoutY="661.0" onMouseEntered="#showInfoSlot13" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage14" fitHeight="78.0" fitWidth="71.0" layoutX="224.0" layoutY="661.0" onMouseEntered="#showInfoSlot14" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage15" fitHeight="78.0" fitWidth="71.0" layoutX="322.0" layoutY="661.0" onMouseEntered="#showInfoSlot15" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage16" fitHeight="78.0" fitWidth="71.0" layoutX="409.0" layoutY="661.0" onMouseEntered="#showInfoSlot16" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage17" fitHeight="78.0" fitWidth="71.0" layoutX="498.0" layoutY="661.0" onMouseEntered="#showInfoSlot17" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage18" fitHeight="78.0" fitWidth="71.0" layoutX="585.0" layoutY="661.0" onMouseEntered="#showInfoSlot18" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage19" fitHeight="78.0" fitWidth="71.0" layoutX="677.0" layoutY="661.0" onMouseEntered="#showInfoSlot19" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage20" fitHeight="78.0" fitWidth="71.0" layoutX="767.0" layoutY="661.0" onMouseEntered="#showInfoSlot20" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage21" fitHeight="78.0" fitWidth="71.0" layoutX="859.0" layoutY="661.0" onMouseEntered="#showInfoSlot21" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="slotImage22" fitHeight="78.0" fitWidth="71.0" layoutX="956.0" layoutY="661.0" onMouseEntered="#showInfoSlot22" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="labelItemInfo" layoutX="967.0" layoutY="71.0" prefHeight="270.0" prefWidth="162.0" />
             <Label layoutX="994.0" layoutY="49.0" prefHeight="17.0" prefWidth="71.0" text="Item Info" />
       </children>
     </AnchorPane>
