--- a/economy-gui/src/main/resources/fxml/ecoMapScene.fxml
+++ b/economy-gui/src/main/resources/fxml/ecoMapScene.fxml
@@ -125,6 +125,7 @@
                   </GridPane>
                   <Button layoutX="82.0" layoutY="370.0" mnemonicParsing="false" onAction="#openEq" text="Inventory" />
                   <Label fx:id="currentPlayerLabel" layoutX="11.0" layoutY="98.0" text="Current player name: xxx" />
+                  <Label fx:id="currentDayLabel" layoutX="11.0" layoutY="125.0" text="Current day: xxx" />
           </children>
         </AnchorPane>
       </items>
