--- a/economy-gui/src/main/resources/fxml/ecoMapScene.fxml
+++ b/economy-gui/src/main/resources/fxml/ecoMapScene.fxml
@@ -45,6 +45,8 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.BorderPane?>
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.psi.gui.launcher.EcoMapSceneController">
   <children>
     <SplitPane dividerPositions="0.7561247216035635" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
@@ -59,6 +61,33 @@
                 <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
               </textFill>
             </Label>
+              <BorderPane layoutX="78.0" layoutY="58.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <center>
+                      <ScrollPane prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+                          <content>
+                              <GridPane fx:id="gridMap">
+                                  <columnConstraints>
+                                      <ColumnConstraints />
+                                      <ColumnConstraints />
+                                  </columnConstraints>
+                                  <rowConstraints>
+                                      <RowConstraints />
+                                  </rowConstraints>
+                                  <children>
+                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                          <GridPane.margin>
+                                              <Insets />
+                                          </GridPane.margin>
+                                      </AnchorPane>
+                                  </children>
+                                  <padding>
+                                      <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                                  </padding>
+                              </GridPane>
+                          </content>
+                      </ScrollPane>
+                  </center>
+              </BorderPane>
           </children>
         </AnchorPane>
         <AnchorPane prefHeight="575.0" prefWidth="307.0">
