--- a/economy-gui/src/main/resources/fxml/map.fxml
+++ b/economy-gui/src/main/resources/fxml/map.fxml
@@ -10,9 +10,9 @@
 
 <AnchorPane prefHeight="631.33" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane layoutX="78.0" layoutY="58.0" prefHeight="631.33" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
-            <ScrollPane prefHeight="631.33" prefWidth="1000.0" BorderPane.alignment="CENTER">
+            <ScrollPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <content>
                   <GridPane fx:id="gridMap">
                      <columnConstraints>
