--- a/economy-gui/src/main/resources/pl/psi/gui/castle/Scene3Rampart.fxml
+++ b/economy-gui/src/main/resources/pl/psi/gui/castle/Scene3Rampart.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/RampartUnits.png" />
+            <Image url="@../../../Images/Rampart/RampartUnits.png" />
          </image>
       </ImageView>
       <Text fill="WHITE" layoutX="209.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="70" wrappingWidth="26.8033447265625" />
