--- a/economy-gui/src/main/resources/pl/psi/eco/gui/castle/Scene1Rampart.fxml
+++ b/economy-gui/src/main/resources/pl/psi/eco/gui/castle/Scene1Rampart.fxml
@@ -18,12 +18,12 @@
    <children>
       <ImageView fx:id="image" fitHeight="513.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Background.png" />
+            <Image url="@../../../../Images/Rampart/Background.png" />
          </image>
       </ImageView>
       <ImageView fx:id="image2" fitHeight="150.0" fitWidth="240.0" layoutX="135.0" layoutY="47.0" onMouseClicked="#EnterFort" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Fort.png" />
+            <Image url="@../../../../Images/Rampart/Fort.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -31,7 +31,7 @@
       </ImageView>
       <ImageView fitHeight="105.0" fitWidth="182.0" layoutX="-4.0" layoutY="270.0" onMouseClicked="#EnterRecruitment1" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Recruitment1.png" />
+            <Image url="@../../../../Images/Rampart/Recruitment1.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -39,7 +39,7 @@
       </ImageView>
       <ImageView fitHeight="131.0" fitWidth="171.0" layoutX="633.0" layoutY="250.0" onMouseClicked="#EnterHall" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Hall.png" />
+            <Image url="@../../../../Images/Rampart/Hall.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -47,7 +47,7 @@
       </ImageView>
       <ImageView fitHeight="182.0" fitWidth="134.0" layoutX="662.0" layoutY="136.0" onMouseClicked="#EnterRecruitment3" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Recruitment3.png" />
+            <Image url="@../../../../Images/Rampart/Recruitment3.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -55,7 +55,7 @@
       </ImageView>
       <ImageView fitHeight="77.0" fitWidth="138.0" layoutY="152.0" onMouseClicked="#EnterRecruitment2" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Recruitment2.png" />
+            <Image url="@../../../../Images/Rampart/Recruitment2.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -63,7 +63,7 @@
       </ImageView>
       <ImageView fitHeight="116.0" fitWidth="127.0" layoutX="350.0" layoutY="80.0" onMouseClicked="#EnterRecruitment4" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Recruitment4.png" />
+            <Image url="@../../../../Images/Rampart/Recruitment4.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -71,7 +71,7 @@
       </ImageView>
       <ImageView fitHeight="98.0" fitWidth="181.0" layoutX="128.0" layoutY="171.0" onMouseClicked="#EnterRecruitment5" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Recruitment5.png" />
+            <Image url="@../../../../Images/Rampart/Recruitment5.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -79,7 +79,7 @@
       </ImageView>
       <ImageView fitHeight="41.0" fitWidth="87.0" layoutX="495.0" layoutY="116.0" onMouseClicked="#EnterRecruitment6" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Recruitment6.png" />
+            <Image url="@../../../../Images/Rampart/Recruitment6.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -87,7 +87,7 @@
       </ImageView>
       <ImageView fitHeight="90.0" fitWidth="193.0" layoutX="613.0" layoutY="47.0" onMouseClicked="#EnterRecruitment7" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/Recruitment7.png" />
+            <Image url="@../../../../Images/Rampart/Recruitment7.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -100,37 +100,37 @@
       </Text>
       <ImageView fitHeight="77.0" fitWidth="79.0" layoutX="88.0" layoutY="387.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/UnitTier1.png" />
+            <Image url="@../../../../Images/Rampart/UnitTier1.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="73.0" fitWidth="76.0" layoutX="170.0" layoutY="391.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/UnitTier2.png" />
+            <Image url="@../../../../Images/Rampart/UnitTier2.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="72.0" fitWidth="69.0" layoutX="248.0" layoutY="396.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/UnitTier3.png" />
+            <Image url="@../../../../Images/Rampart/UnitTier3.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="74.0" fitWidth="76.0" layoutX="403.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/UnitTier5.png" />
+            <Image url="@../../../../Images/Rampart/UnitTier5.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="75.0" fitWidth="78.0" layoutX="481.0" layoutY="390.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/UnitTier6.png" />
+            <Image url="@../../../../Images/Rampart/UnitTier6.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="74.0" fitWidth="76.0" layoutX="560.0" layoutY="391.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/UnitTier7.png" />
+            <Image url="@../../../../Images/Rampart/UnitTier7.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="72.0" fitWidth="69.0" layoutX="327.0" layoutY="395.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Images/Rampart/UnitTier4.png" />
+            <Image url="@../../../../Images/Rampart/UnitTier4.png" />
          </image>
       </ImageView>
       <Text fx:id="unit1Count" fill="WHITE" layoutX="148.0" layoutY="462.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="17.9375">
